welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:1: error: Missing closing brace `}' assumed here
var nbBiscuits: Int=0
^Poucet:1: error: Missing closing brace `}' assumed here
var nbBiscuits: Int=0
^Poucet:1: error: expected class or object definition
var nbBiscuits: Int=0
^Poucet:2: error: expected class or object definition
do (for n <- 1 to 5{
^