welcome.lessons.welcome.loopdowhile.Poucet1.scala.code
var nbBiscuits: Int=0
do (for n <- 1 to 5{
  avance();
  nbBscuits = nbBiscuits + 1)
} if nbBiscuits >= 3 {
    gauche();
  else{
    droite();{
  while (estSurBlanc)
}
    avance();
    